# Faster-VoxelPose

./: .gitignore  check_midpoint_hypothesis.py  check_space_center.py  preprocess.py  requirements.txt  visualize_custom_cameras.py  visualize_panoptic_cameras.py
configs/custom/: jln64.yaml
demo/: CMakeLists.txt  GPU_TENSOR_FIX.md  PERFORMANCE_OPTIMIZATION.md  PIPELINE_OPTIMIZATION.md  README.md  README_INSTALL.md  README_PERSON_TRACKING.md  README_TensorRT.md  camera_utils.hpp  faster_voxelpose_demo.cpp  faster_voxelpose_inference.cpp  install.bat  tracking_config_example.txt  uninstall.bat
demo/include/: GigELib.h  camera.h  image_processing.h  license_auth.h  person_tracker.h  projection.h  tensorrt_inference.h  types.h  utils.h  visualization.h
demo/src/: camera.cpp  capture_from_cameras.cpp  capture_from_files.cpp  image_processing.cpp  license_auth.cpp  license_generator.cpp  main.cpp  person_tracker.cpp  projection.cpp  tensorrt_inference.cpp  types.cpp  utils.cpp  visualization.cpp
lib/core/: function.py  proposal.py
lib/dataset/: JointsDataset.py  __init__.py  custom.py  panoptic.py
lib/models/: __init__.py  cnns_1d.py  cnns_2d.py  faster_voxelpose.py  faster_voxelpose_inference.py  faster_voxelpose_ts.py  human_detection_net.py  human_detection_net_inference.py  human_detection_net_ts.py  joint_localization_net.py  joint_localization_net_inference.py  joint_localization_net_ts.py  project_individual.py  project_individual_inference.py  project_individual_ts.py  project_whole.py  project_whole_inference.py  project_whole_ts.py  weight_net_ts.py
lib/utils/: cameras.py  rtsp_utils.py  vis.py
run/: export.py  service.py  validate.py  validate_onnx_ts.py  validate_ts.py
